Fix phx-click events on iOS
Apparently you need some css stuff to make non-buttons clickable? I
forget about this every time.

--- a/apps/client/assets/static-css/index.scss
+++ b/apps/client/assets/static-css/index.scss
@@ -26,3 +26,7 @@ button, .button {
     @apply bg-blue-700;
   }
 }
+
+[phx-click] {
+  cursor: pointer;
+}
